# gpr-300-spr2024-Tristan-Schonfeldt-Aultman

./: CMakeLists.txt
assignments/GTASession/: CMakeLists.txt  main.cpp
assignments/GTASession/assets/: geoShader.frag  lightVis.frag  lightVolume.frag  lightVolume.vert  lightingPass.frag  lit.frag  lit.vert  plane.frag  plane.vert  shadow.vert
assignments/PBRWorksession/: CMakeLists.txt  main.cpp
assignments/PBRWorksession/assets/: geoShader.frag  geoShader.vert  lightVis.frag  lightVis.vert  lit.frag  pbr.frag
assignments/assignment0/: main.cpp
assignments/assignment0/assets/: lit.frag  lit.vert
assignments/assignment1/: main.cpp
assignments/assignment1/assets/: bloom.frag  bloomLit.frag  blurr.frag  chromaticAboration.frag  crt.frag  distortion.frag  edgeDetection.frag  fog.frag  fullscreen.frag  gaussenBlur.frag  grayScale.frag  hdr.frag  inverse.frag  lit.frag  psx.frag  vignette.frag
assignments/assignment2/: main.cpp
assignments/assignment2/assets/: blinnPhong.frag  blinnPhong.vert  shadowDeform.frag  shadowDeform.vert
assignments/workSession0/: CMakeLists.txt  main.cpp
assignments/workSession1/: CMakeLists.txt  main.cpp
assignments/workSession1.5/: CMakeLists.txt  main.cpp
assignments/workSession1.5/assets/: toon.frag  water.frag  water.vert
assignments/workSession1/assets/: water.frag
core/: CMakeLists.txt
core/ew/: mesh.cpp  model.cpp  shader.cpp  shader.h
core/tsa/: framebuffer.cpp  framebuffer.h  shaderStructs.h
